<resources>
    <string name="app_name">Splunk RUM Sample App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="crash">Crash</string>
    <string name="email_question">It looks like you\'re trying to send an email. Can I help with that?</string>
    <string name="cancel">NO!</string>
    <string name="clippy">clippy</string>
    <string name="http_me_up">HTTP me up!</string>
    <string name="http_me_bad">Http Error</string>
    <string name="volley_client">Volley HTTP</string>
    <string name="http_not_found">HTTP Not Found</string>

    <string name="local_web_view">Local WebView</string>
    <string name="web_view">WebView</string>
    <string name="start_spam">Spam start!</string>
    <string name="stop_spam">Spam stop</string>
    <plurals name="spam_status">
        <item quantity="one">Created %d span</item>
        <item quantity="other">Created %d spans</item>
    </plurals>
    <string name="freeze">Freeze!</string>
    <string name="work_it">Work it!</string>
    <string name="custom_tab">Chrome</string>
    <string name="second_fragment">second fragment</string>
    <string name="draw_slowly">Draw Slowly</string>
    <string name="draw_speed_normally">Draw Normally</string>
    <string name="draw_speed_slowly">Draw Slowly</string>
    <string name="send_email">send email</string>
</resources>